css/main.css
/* HTML Reset and Variables*/
* {
  margin: 0;
  padding: 0;
  --primary-color: #ff7f11;
  --secondary-color: #ff1b1c;
  --dark-color: #333;
  --light-color: #beb7a4;
  --white: #fff;
  --black: #000;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Lato", sans-serif;
  line-height: 1.4;
  background: var(--white);
}

a {
  text-decoration: none;
  color: var(--dark-color);
}

ul {
  list-style: none;
}

img {
  width: 100%;
}

/* Utility Classes */
.container {
  max-width: 1280px;
  padding: 0 1.5rem;
  margin: auto;
  overflow: hidden;
}

.underline {
  height: 2px;
  width: 5rem;
  background: var(--primary-color);
  display: block;
  margin: 0 auto 1rem auto;
}

.padding-1 {
  padding: 1rem 0rem;
}

.padding-2 {
  padding: 2rem 0rem;
}

.padding-3 {
  padding: 3rem 0rem;
}

.padding-4 {
  padding: 4rem 0rem;
}

.margin-1 {
  margin: 1rem 0rem;
}
.margin-2 {
  margin: 2rem 0rem;
}
.margin-3 {
  margin: 3rem 0rem;
}
.margin-4 {
  margin: 4rem 0rem;
}

.bg-primary {
  background-color: var(--primary-color);
  color: var(--light-color);
}

.bg-secondary {
  background-color: var(--secondary-color);
  color: var(--dark-color);
}

.bg-light {
  background-color: var(--light-color);
  color: var(--dark-color);
}

.bg-dark {
  background-color: var(--dark-color);
  color: var(--light-color);
}

.overlay {
  background-color: rgba(0, 0, 0, 0.5);
  height: 100%;
  width: 100%;
}

/* Button Classes */
.btn-primary,
.btn-secondary,
.btn-light,
.btn-dark {
  display: inline-block;
  padding: 0.75rem 2rem;
  transition: all 0.5s;
  border: none;
  cursor: pointer;
  border-radius: 50px;
}

.btn-primary {
  color: var(--dark-color);
  background-color: var(--primary-color);
}

.btn-secondary {
  color: var(--light-color);
  background-color: var(--secondary-color);
}

.btn-light {
  color: var(--dark-color);
  background-color: var(--light-color);
}

.btn-dark {
  color: var(--light-color);
  background-color: var(--dark-color);
}

button[class^="btn-"]:hover,
a[class^="btn-"]:hover,
input[class^="btn-"]:hover {
  background-color: var(--primary-color);
}

/* Font Classes */
.lead-p {
  font-size: 1.5rem;
  margin-bottom: 2rem;
}

.text-center {
  text-align: center;
}

.section-head {
  font-size: 2.5rem;
  display: block;
  padding-bottom: 0.5rem;
  font-weight: 300;
  text-transform: uppercase;
}

.emphasis-color {
  color: var(--primary-color);
}

/* Navbar */
#logo {
  width: 70px;
  height: 70px;
  color: var(--white);
}

#main-nav {
  display: flex;
  justify-content: space-between;
  padding-top: 0.75rem;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.3);
}

#main-nav ul {
  display: flex;
}

#main-nav li {
  padding: 0.75rem 1rem;
}

#main-nav a {
  text-decoration: none;
  color: var(--white);
  text-transform: uppercase;
  border-bottom: 2px transparent solid;
  padding-bottom: 0.5rem;
  transition: border-color 0.5s;
}

#main-nav a:hover {
  border-color: var(--primary-color);
}

#main-nav a.current {
  border-color: var(--primary-color);
}

/* Home Page */
#header-home {
  background: url("../img/background-img.jpg") no-repeat center right/cover;
  height: 100vh;
  color: var(--white);
}

#header-home .header-content {
  text-align: center;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.8);
}

#header-home .header-content h1 {
  font-size: 4rem;
  line-height: 1.4;
  text-align: center;
  padding-top: 25%;
}

#header-home .header-content a {
  color: var(--white);
  font-size: 1.25rem;
}

#header-home .header-content a:hover {
  color: var(--primary-color);
}

/* Footer */
#main-footer {
  background: var(--dark-color);
  color: var(--white);
  height: 5rem;
}

#main-footer .footer-content {
  display: flex;
  justify-content: space-between;
  height: 5rem;
  align-items: center;
}

#main-footer .footer-content .social-links .fab,
#main-footer .footer-content .social-links .fas {
  margin-right: 1rem;
  border: 2px white solid;
  border-radius: 50%;
  height: 20px;
  width: 20px;
  line-height: 20px;
  text-align: center;
  padding: 0.5rem;
  color: var(--white);
}

#main-footer .footer-content .social-links .fa-envelope:hover {
  color: #db4437;
  border: 2px #db4437 solid;
}
#main-footer .footer-content .social-links .fa-twitter:hover {
  color: #1da1f2;
  border: 2px #1da1f2 solid;
}
#main-footer .footer-content .social-links .fa-github:hover {
  color: #161b22;
  border: 2px #161b22 solid;
}
#main-footer .footer-content .social-links .fa-instagram:hover {
  color: #e1306c;
  border: 2px #e1306c solid;
}
#main-footer .footer-content .social-links .fa-free-code-camp:hover {
  color: #1b1b32;
  border: 2px #1b1b32 solid;
}
#main-footer .footer-content .social-links .fa-fish:hover {
  color: #fec1ee;
  border: 2px #fec1ee solid;
}

/* About Section */
#about-section #about-section-info {
  display: grid;
  grid-template-areas:
    "bioimg bio bio"
    "cert-1 cert-2 cert-3";
  grid-gap: 1.3rem;
}

#about-section-info a {
  color: var(--primary-color);
}

#about-section-info a:hover {
  color: var(--secondary-color);
}

#about-section-info h4 {
  text-transform: uppercase;
}

#about-section-info p {
  font-size: 1.25rem;
}

#about-section-info .biography-image {
  grid-area: bioimg;
}

#about-section-info .biography {
  grid-area: bio;
  border-left: 2px solid var(--primary-color);
  padding: 0.75rem;
}

#about-section .cert-1 {
  grid-area: cert-1;
}

#about-section .cert-2 {
  grid-area: cert-2;
}

#about-section .cert-3 {
  grid-area: cert-3;
}

#about-section .cert-1 .fas,
#about-section .cert-2 .fas,
#about-section .cert-3 .fab {
  color: var(--primary-color);
  margin: 0.75rem;
}

#about-section-logos .bio-logos {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1.5rem;
}

#about-section-logos .bio-logos img {
  width: 80%;
}

/* Projects Section */

#projects-section .lead {
  font-size: 1.5rem;
}

.projects {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 0.5rem;
}

.project-tile {
  position: relative;
  background-color: var(--primary-color);
  overflow: hidden;
  border-radius: 5px;
}

.project-text {
  color: var(--white);
  text-transform: uppercase;
}

.project-tile::after {
  content: "";
  position: absolute;
  display: block;
  background: inherit;
  opacity: 0.9;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transform: scale(2) translateX(-75%) translateY(-75%) rotate(-28deg);
  transition: transform 3s cubic-bezier(0.2, 1, 0.3, 1);
}

.project-tile:hover:after {
  transform: scale(2) translateX(0) translateY(0) rotate(-28deg);
}

.project-tile:hover .project-img {
  transform: scale(1.2);
}

.project-tile:hover .project-text {
  position: absolute;
  text-transform: uppercase;
  font-size: 1.2rem;
  opacity: 0.7;
  margin: 0;
  text-align: center;
  z-index: 1;
  color: var(--white);
  transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1),
    transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
  transition-delay: 300ms;
  width: 100%;
  top: 50%;
  transform: translateY(-50%);
}

.project-img img {
  height: 360px;
  width: 100%;
  object-fit: center cover;
  transform: translateZ(0);
  display: block;
  transition: transform 750m cubic-bezier(0.2, 1, 0.3, 1);
}

